fix overflow on main page

--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,45 @@
 @import-normalize; /* bring in normalize.css styles */
 
 @font-face {
-  font-family: "Inter-Regular";
-  src: local("Inter-Regular"),
-    url('./fonts/Inter/Inter-Regular.ttf') format("truetype");
+  font-family: 'Inter-Regular';
+  src: local('Inter-Regular'),
+    url('./fonts/Inter/Inter-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Inter-Medium";
-  src: local("Inter-Medium"),
-    url('./fonts/Inter/Inter-Medium.ttf') format("truetype");
+  font-family: 'Inter-Medium';
+  src: local('Inter-Medium'),
+    url('./fonts/Inter/Inter-Medium.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Manrope-Regular";
-  src: local("Manrope-Regular"),
-    url('./fonts/Manrope/Manrope-Regular.ttf') format("truetype");
+  font-family: 'Manrope-Regular';
+  src: local('Manrope-Regular'),
+    url('./fonts/Manrope/Manrope-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Manrope-Medium";
-  src: local("Manrope-Medium"),
-    url('./fonts/Manrope/Manrope-Medium.ttf') format("truetype");
+  font-family: 'Manrope-Medium';
+  src: local('Manrope-Medium'),
+    url('./fonts/Manrope/Manrope-Medium.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Manrope-SemiBold";
-  src: local("Manrope-SemiBold"),
-    url('./fonts/Manrope/Manrope-SemiBold.ttf') format("truetype");
+  font-family: 'Manrope-SemiBold';
+  src: local('Manrope-SemiBold'),
+    url('./fonts/Manrope/Manrope-SemiBold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Manrope-Bold";
-  src: local("Manrope-Bold"),
-    url('./fonts/Manrope/Manrope-Bold.ttf') format("truetype");
+  font-family: 'Manrope-Bold';
+  src: local('Manrope-Bold'),
+    url('./fonts/Manrope/Manrope-Bold.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Manrope-ExtraBold";
-  src: local("Manrope-ExtraBold"),
-    url('./fonts/Manrope/Manrope-ExtraBold.ttf') format("truetype");
+  font-family: 'Manrope-ExtraBold';
+  src: local('Manrope-ExtraBold'),
+    url('./fonts/Manrope/Manrope-ExtraBold.ttf') format('truetype');
 }
 
 *,
@@ -91,7 +91,7 @@ body {
   min-height: 100vh;
   margin: 0;
 
-  font-family: "Manrope-Regular";
+  font-family: 'Manrope-Regular';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
@@ -100,16 +100,19 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
 
-  background-color: #FDF7F2;
+  background-color: #fdf7f2;
 
   @media screen and (min-width: 768px) {
     font-size: 16px;
   }
-
-    
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.no-scroll {
+  max-width: 100vw;
+  overflow: hidden;
 }
